# AI-Log-Diagnosis-System

./: README.md
AI-Log-Diagnosis-System/src/ingestion/: consumer.py
ai-log-rca-system/: pyproject.toml
ai-log-rca-system/config/: production.yaml
ai-log-rca-system/src/anomaly_detection/temporal/: lstm_autoencoder.py
ai-log-rca-system/src/anomaly_detection/unsupervised/: isolation_forest.py
ai-log-rca-system/src/parsing/: drain_parser.py
