[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ai-log-rca-system"
version = "2.0.0"
description = "Advanced AI-powered log diagnosis and root cause detection"
authors = ["GSoC Contributor <gsoc@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
torch = "^2.1.0"
transformers = "^4.36.0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
kafka-python = "^2.0.2"
pandas = "^2.1.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
drain3 = "^0.9.11"
sentence-transformers = "^2.2.2"
hdbscan = "^0.8.33"
networkx = "^3.1"
dgl = "^1.1.0"
causalnex = "^0.13.0"
langchain = "^0.1.0"
chromadb = "^0.4.18"
redis = "^5.0.1"
prometheus-client = "^0.19.0"
celery = "^5.3.0"
pydantic = "^2.5.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.11.0"
ruff = "^0.1.0"
mypy = "^1.7.0"
pre-commit = "^3.5.0"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true